fixed keyboard issue on mobile

--- a/src/components/GameLevel/GameLevel.module.css
+++ b/src/components/GameLevel/GameLevel.module.css
@@ -1,6 +1,7 @@
 .container{
     transition: background-color 2s linear;
     outline: 5px solid #060a0e;
+    height: auto;
 }
 .correct{
     background-color: #9af03d;
@@ -18,8 +19,9 @@
 .content{
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     width: 900px;
+    padding: 40px 0;
     margin: 0 auto;
     text-align: center;
     justify-content: center;
